[gd_scene load_steps=15 format=3 uid="uid://crqls04drs0i4"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_wkxhp"]
[ext_resource type="Resource" uid="uid://dolqfyy0kahnf" path="res://Inventory/playerinv.tres" id="2_5nph4"]
[ext_resource type="Texture2D" uid="uid://byu7dn1urvqoy" path="res://Player/charworld.png" id="2_sa51m"]
[ext_resource type="PackedScene" uid="uid://cfo6bt56b2mwd" path="res://Inventory/inv_ui.tscn" id="4_0rdy4"]
[ext_resource type="PackedScene" uid="uid://b53oe7k8mpb1f" path="res://Interface/PlayAgain.tscn" id="5_q2qjo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dxd53"]
size = Vector2(86, 111.539)

[sub_resource type="Animation" id="Animation_2b28h"]
resource_name = "Death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.3, 0.5, 0.7, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [37, 38, 39, 40, 41]
}

[sub_resource type="Animation" id="Animation_r8vep"]
resource_name = "Idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.1, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 19]
}

[sub_resource type="Animation" id="Animation_1wjoj"]
resource_name = "Jump"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [26]
}

[sub_resource type="Animation" id="Animation_nhlvt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}

[sub_resource type="Animation" id="Animation_upve7"]
resource_name = "Sleep"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.9, 1.1, 1.4, 1.6, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 9, 8, 7, 6, 5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_si1bk"]
resource_name = "Walk"
length = 0.65
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gth7w"]
_data = {
"Death": SubResource("Animation_2b28h"),
"Idle": SubResource("Animation_r8vep"),
"Jump": SubResource("Animation_1wjoj"),
"RESET": SubResource("Animation_nhlvt"),
"Sleep": SubResource("Animation_upve7"),
"Walk": SubResource("Animation_si1bk")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gsviy"]
size = Vector2(142, 57)

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 3
script = ExtResource("1_wkxhp")
inv = ExtResource("2_5nph4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7.00003)
scale = Vector2(1, 0.519999)
shape = SubResource("RectangleShape2D_dxd53")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(2, -121)

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(1, -42)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Marker2D"]
texture = ExtResource("2_sa51m")
hframes = 46
frame = 15
region_rect = Rect2(3231, 59, 72, 67)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Marker2D"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_gth7w")
}
autoplay = "Idle"

[node name="Area2D" type="Area2D" parent="Marker2D"]
position = Vector2(-1, 42)
collision_layer = 3
collision_mask = 2
monitorable = false

[node name="AttackBox" type="CollisionShape2D" parent="Marker2D/Area2D"]
position = Vector2(97, -6.5)
shape = SubResource("RectangleShape2D_gsviy")

[node name="Inv_UI" parent="." instance=ExtResource("4_0rdy4")]
offset_left = -137.0
offset_top = -297.0
offset_right = 139.0
offset_bottom = -89.0

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -44.0
offset_top = -75.0
offset_right = 45.0
offset_bottom = -48.0

[node name="PlayAgain" parent="." instance=ExtResource("5_q2qjo")]
visible = false
offset_left = -576.0
offset_top = -496.0
offset_right = -576.0
offset_bottom = -496.0

[connection signal="body_entered" from="Marker2D/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Marker2D/Area2D" to="." method="_on_area_2d_body_exited"]
